# MyLabs

./: CMakeLists.txt  README.md
2st Semestr/: myLibrary.c  myLibrary.h
2st Semestr/Lections/: functionsLections.c  headerLections.h  mainLections.c
2st Semestr/Practice/: functionsPractice.c  headerPractice.h  info.txt  mainPractice.c
2st Semestr/Practice/Учебная практика ОАиП/: decodeSquareA3.drawio  mainA3.drawio  Отчет УПОзн ОАиП.docx
2st Semestr/exam prep/: functionsExamPrep.c  headerExamPrep.h  mainExamPrep.c
2st Semestr/lubNumber 2.6/: functionsRing.c  headerRing.h  mainRing.c
2st Semestr/lubNumber2.4/: functionsUnion.c  headerUnion.h  mainUnion.c
2st Semestr/lubNumber2.4.2/: functionsUnion2.c  headerUnion2.h  mainUnion2.c
2st Semestr/lubNumber2.5/: functionsStack.c  headerStack.h  mainStack.c
2st Semestr/lubNumber2.6/: functionsRing.c  mainRing.c
2st Semestr/lubNumber2.7/: functionsTree.c  headerTree.h  mainTree.c
2st Semestr/number systems/: functionsSystems.c  headerSystems.h  mainSystems.c
2st Semestr/numbersystems/: functionsSystems.c  headerSystems.h  mainSystems.c
